--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,15 +1,15 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-token_swap = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.testnet]
+token_swap = "2uwqgDaHuyyUx36e9LSaxRQStDfeMH1SrLQGo3xLSBWV"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/home/dell/.config/solana/id.json"
+cluster = "testnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
