--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.25.0",
     "@heroicons/react": "^1.0.5",
+    "@project-serum/anchor": "^0.25.0",
     "@solana/spl-token-registry": "^0.2.298",
     "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/wallet-adapter-phantom": "^0.7.0",
@@ -23,12 +23,12 @@
     "daisyui": "^1.16.2",
     "dotenv": "^10.0.0",
     "immer": "^9.0.12",
-    "zustand": "^3.6.9",
     "next": "^12.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
