--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@project-serum/anchor": "^0.25.0",
+    "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.298",
     "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/wallet-adapter-phantom": "^0.7.0",
